<resources>
    <string name="app_name">QRify</string>
    <string name="read_qrs">Read QRs</string>
    <string name="create_qrs">Create QRs</string>
    <string name="permissions_failed">Permissions not granted.</string>
    <string name="result_icon">Result icon</string>
    <string name="open_in_browser">Open in Browser</string>
    <string name="text_found">A text found!</string>
    <string name="url_found">An URL found!</string>
    <string name="wifi_network_found">A Wi-Fi network found!</string>
    <string name="ssid" translatable="false">SSID</string>
    <string name="encryption">Encryption</string>
    <string name="password">Password</string>
    <string name="suggested_wifi">Wi-Fi network suggested. Continue to Settings to connect.</string>
    <string name="suggestion_failed">Suggestion failed.</string>
    <string name="connect_to_wifi">Connect to Wi-Fi network</string>
    <string name="show_wifi_info">Show Wi-Fi info</string>
    <string name="create_text">You can create various QRs here.</string>
    <string name="text">Text</string>
    <string name="url">URL</string>
    <string name="phone">Phone</string>
    <string name="e_mail">E-mail</string>
    <string name="phone_found">A phone number found!</string>
    <string name="email_found">An e-mail address found!</string>
    <string name="dial_number">Dial number</string>
    <string name="send_email">Send e-mail</string>
    <string name="create">Create</string>
    <string name="data_content">Data content</string>
    <string name="qr_created">QR successfully created!</string>
</resources>